WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285483
REGRESSION(
288409@main
): Assertion failure in TestWebKitAPI.WKBackForwardList.BackForwardListRemoveAndAddSubframes
https://bugs.webkit.org/show_bug.cgi?id=285483
Summary
REGRESSION(288409@main): Assertion failure in TestWebKitAPI.WKBackForwardList...
Charlie Wolfe
Reported
2025-01-06 17:01:00 PST
We need to remove a debug assertion that is no longer valid after
288409@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-06 17:01:41 PST
<
rdar://problem/142447260
>
Charlie Wolfe
Comment 2
2025-01-06 17:02:48 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38614
EWS
Comment 3
2025-01-06 17:13:33 PST
Committed
288496@main
(036f8fd0ebab): <
https://commits.webkit.org/288496@main
> Reviewed commits have been landed. Closing PR #38614 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug