REGRESSION(288409@main): Assertion failure in TestWebKitAPI.WKBackForwardList.BackForwardListRemoveAndAddSubframes https://bugs.webkit.org/show_bug.cgi?id=285483 rdar://142447260

Reviewed by Jonathan Bedard.

288408@main made history state loaded and committed by the navigating frame, so this assertion is no
longer valid.

* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::goToBackForwardItem):

Canonical link: https://commits.webkit.org/288496@main